--- a/movie-clone-app/index.html
+++ b/movie-clone-app/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png+xml" href="../movie-clone-app/src/assets/images/Netflix_Symbol_RGB.png" />
+    <link rel="icon" type="image/png+xml" href="./src/assets/images/Netflix_Symbol_RGB.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Netflix-React-Clone</title>
   </head>
